--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "funykeyboard",
   "version": "1.0.0",
   "description": "",
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "extends": "airbnb-base"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "lint": "eslint index.js",
+    "dev": "webpack-dev-server --mode development",
+    "build": "webpack --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "AlenaShkr",
@@ -13,6 +22,18 @@
   "devDependencies": {
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.14.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-stage-3": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-loader": "^2.1.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.11.0"
   }
 }
