--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "lint": "eslint index.js",
+    "start": "node js/index.js",
+    "lint": "eslint js/index.js",
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
